rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: canary-app

spec:
  replicas: 5

  selector:
    matchLabels:
      app: canary

  template:
    metadata:
      labels:
        app: canary

    spec:
      containers:
      - name: nginx
        image: nginx:latest

        ports:
        - containerPort: 80

        volumeMounts:
        - name: website
          mountPath: /usr/share/nginx/html

      volumes:
      - name: website
        configMap:
          name: website-content-v1

  strategy:
    canary:
      stableService: canary-stable
      canaryService: canary-canary

      trafficRouting:
        nginx:
          stableIngress: canary-ingress

      steps:
      - setWeight: 20
      - pause:
          duration: 30s

      - setWeight: 50
      - pause:
          duration: 30s

      - setWeight: 100
