service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-stable

spec:
  selector:
    app: canary

  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: canary-canary

spec:
  selector:
    app: canary

  ports:
  - port: 80
    targetPort: 80
